syntax = "proto3";

package stash.GRPC.V1.Collections;

message DeleteRequest {
  bytes ref = 1;
}

