syntax = "proto3";

package stash.GRPC.V1.Collections;

message ListRequest {
}

